# osrs-method-creator

./: .gitignore  Cargo.toml  README.md
src/: attack.rs  camera.rs  debug.rs  game_ticks.rs  input.rs  main.rs  movement.rs  npc.rs  player.rs  schedule.rs  sequence.rs  state.rs  utils.rs  world.rs
