[package]
name = "osrs-method-creator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
debug = []
gizmos = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimization for dependencies
[profile.dev.package."*"]
opt-level = 3
